# django-states2

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: main.yml
demo_app/demo_app/: settings.py  settings_test.py  urls.py  wsgi.py
django_states/: __init__.py  compat.py  conf.py  exceptions.py  fields.py  log.py  machine.py  model_methods.py  models.py  signals.py  tests.py  urls.py  views.py
django_states/management/commands/: graph_states2.py
django_states/templatetags/: django_states.py
django_states/tests/: test_state_machine.py
docs/: conf.py
