[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pivotal-django-states"
dynamic = ["version"]
description = "State machine for django models"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Pivotal Energy Solutions", email = "steve@pivotal.energy" },
]
keywords = [
    "django",
    "state-machine",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "Django>=4.2",
    "six"
]

[project.optional-dependencies]
test = [
    "django-environ",
    "mysqlclient",
    "flake8",
    "coverage",
    "pre-commit",
    "black",
    "bandit"
]

[project.urls]
Issues = "https://github.com/pivotal-energy-solutions/django-states2/issues"
Download = "https://github.com/pivotal-energy-solutions/django-states2/archive/1.7.30.tar.gz"
Homepage = "https://github.com/pivotal-energy-solutions/django-states2"
"Original Source" = "https://github.com/vikingco/django-states2"
Thanks = "https://saythanks.io/to/rh0dium"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "/django_states",
]

[tool.hatch.build.targets.wheel]
packages = ['django_states']
include = [
    "/django_input_collection/templates/**/*",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '(\.git|.venv|_build|build|dist|.*\/__pycache__\/)'

[tool.ruff]
line-length = 100
lint.ignore = ["F401"]

[tool.bandit]
targets = ['django_states']
exclude_dirs = ["django_states/tests", "demo_app"]
skips = ["B101"]

[tool.coverage.run]
branch = true
command_line = "demo_app/manage.py test --noinput --settings=demo_app.settings_test django_states.tests"
omit = [
    "*/demo_app/**",
    "*/migrations/*",
    "*/tests/**",
]

[tool.coverage.report]
fail_under = 88
precision = 1
skip_covered = true
skip_empty = true
ignore_errors = true
sort = "cover"

[tool.bumper]
exclude = [".idea", ".github", "demo_app"]
version_files = ["django_states/__init__.py"]
repo = "pivotal-energy-solutions/django-states2"
report = "out.json"
